[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth_emulator"
path = "src/auth_emulator/main.rs"

[[bin]]
name = "emulator"
path = "src/emulator/main.rs"

[lib]               # Общий код (если нужно собрать как библиотеку)
name = "http"
path = "src/http/mod.rs"

[dependencies]
anyhow = "1.0.98"
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
futures = "0.3.31"
indoc = "2.0.6"
io = "0.0.2"
maplit = "1.0.2"
reqwest = {version = "0.12.22", features = ["json", "stream"]}
serde = { version = "1.0.219", features=["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full", "net", "io-util"] }
tokio-util = { version = "0.7.16", features = ["io"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

