[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth_emulator"
path = "src/auth_emulator/main.rs"

[[bin]]
name = "emulator"
path = "src/emulator/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"]} 
tokio = { version = "1.46.1", features = ["full", "net", "io-util"] }
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
serde = { version = "1.0.219", features=["derive"] }
serde_json = "1.0.141"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }
option-filter = "1.0.2"


